; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ac97/extr_ac97_codec.c_set_inv_eapd.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ac97/extr_ac97_codec.c_set_inv_eapd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ac97 = type { i32 }
%struct.snd_kcontrol = type { i32 }

@AC97_POWERDOWN = common dso_local global i32 0, align 4
@AC97_SCAP_INV_EAPD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ac97*, %struct.snd_kcontrol*)* @set_inv_eapd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_inv_eapd(%struct.snd_ac97* %0, %struct.snd_kcontrol* %1) #0 {
  %3 = alloca %struct.snd_ac97*, align 8
  %4 = alloca %struct.snd_kcontrol*, align 8
  store %struct.snd_ac97* %0, %struct.snd_ac97** %3, align 8
  store %struct.snd_kcontrol* %1, %struct.snd_kcontrol** %4, align 8
  %5 = load i32, i32* @AC97_POWERDOWN, align 4
  %6 = call i32 @AC97_SINGLE_VALUE(i32 %5, i32 15, i32 1, i32 0)
  %7 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %4, align 8
  %8 = getelementptr inbounds %struct.snd_kcontrol, %struct.snd_kcontrol* %7, i32 0, i32 0
  store i32 %6, i32* %8, align 4
  %9 = load %struct.snd_ac97*, %struct.snd_ac97** %3, align 8
  %10 = load i32, i32* @AC97_POWERDOWN, align 4
  %11 = call i32 @snd_ac97_update_bits(%struct.snd_ac97* %9, i32 %10, i32 32768, i32 32768)
  %12 = load i32, i32* @AC97_SCAP_INV_EAPD, align 4
  %13 = load %struct.snd_ac97*, %struct.snd_ac97** %3, align 8
  %14 = getelementptr inbounds %struct.snd_ac97, %struct.snd_ac97* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = or i32 %15, %12
  store i32 %16, i32* %14, align 4
  ret void
}

declare dso_local i32 @AC97_SINGLE_VALUE(i32, i32, i32, i32) #1

declare dso_local i32 @snd_ac97_update_bits(%struct.snd_ac97*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
